# simply-trade

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  settings.json
backend/app/: __init__.py  config.py  database.py  main.py  seed.py
backend/app/api/: __init__.py  account.py  assignments.py  backtests.py  historical.py  market_movers.py  news.py  ops.py  orders.py  portfolios.py  positions.py  settings.py  strategies.py  symbols.py
backend/app/backtest/: engine.py  metrics.py
backend/app/bridge/: bridge.py  connection.py  events.py
backend/app/models/: __init__.py  assignment.py  backtest.py  fill.py  historical_bar.py  ibkr_fill.py  ibkr_order.py  mixins.py  order.py  portfolio.py  position.py  signal.py  strategy.py  symbol.py
backend/app/schemas/: __init__.py  assignment.py  base.py  order.py  portfolio.py  position.py  strategy.py  symbol.py
backend/app/services/: __init__.py  flex_query.py  market_data_service.py  notification_service.py  order_service.py  portfolio_service.py
backend/app/strategies/: __init__.py  base.py  bb_squeeze.py  bull_flag.py  clocks.py  context.py  data_sources.py  donchian_breakout.py  gap_and_go.py  macd_crossover.py  mean_reversion.py  opening_range.py  routers.py  rsi_ema.py  sentiment_momentum.py  signals.py  vwap_reclaim.py
backend/app/utils/: market_hours.py
backend/app/workers/: backtest_runner.py  celery_app.py  (+3 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_api.py  test_models.py
(+65 files in other folders)
